--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
-  "require-dev" : {
-    "phpunit/phpunit": "4.6.4"
-  },
-  "autoload": {
-    "psr-0" : {
-      "PTX" : "src/"
-    }
-  }
+	"name": "tomaspavlatka/ptx-clock", 
+	"version": "1.0",
+	"require-dev" : {
+		"phpunit/phpunit": "4.6.4"
+	},
+	"autoload": {
+		"psr-0" : {
+			"PTX" : "src/"
+		}
+	}
 }
